Responsive fix. More alignment fixes

--- a/public/assets/css/bootswatch.css
+++ b/public/assets/css/bootswatch.css
@@ -19,7 +19,7 @@ ul li .date {
   margin-right: 1rem;
   line-height: 3rem;
   color: #b4bcc2;
-  width: 130px;
+  width: 10rem;
   text-align: right;
 }
 .date {
