--- a/public/assets/less/main.less
+++ b/public/assets/less/main.less
@@ -21,7 +21,7 @@ ul {
       margin-right: 1rem;
       line-height: 3rem;
       color: @gray-light;
-      width: 130px;
+      width: 10rem;
       text-align: right;
     }
   }
